force-app/main/default/objects/Organization_Alternate_ID__c/Organization_Alternate_ID__c.object-meta.xml
<CustomObject>
    <label>Organization Alternate ID</label>
    <nameField>
        <displayFormat>OAI-{00000}</displayFormat>
        <label>Organization Alternate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organization Alternate IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>