force-app/main/default/objects/Organization_Alternate_ID__c/fields/ID_Other__c.field-meta.xml
<CustomField>
    <fullName>ID_Other__c</fullName>
    <label>Other ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>