force-app/main/default/objects/Organization_Alternate_ID__c/fields/ID_Type_1__c.field-meta.xml
<CustomField>
    <fullName>ID_Type_1__c</fullName>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ID_Type_Codes</valueSetName>
    </valueSet>
</CustomField>