force-app/main/default/objects/Organization_Alternate_ID__c/fields/Mig_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Mig_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Mig External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>