force-app/main/default/objects/Organization_Alternate_ID__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Mig_External_Id__c</columns>
    <columns>ID_Other__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>